package edu.fiuba.algo3.modelo.Turno;

import edu.fiuba.algo3.modelo.Carta.CartaDesarrollo;
import edu.fiuba.algo3.modelo.Construccion.Construccion;
import edu.fiuba.algo3.modelo.Comercio.Comercio;
import edu.fiuba.algo3.modelo.Dado.Dado;
import edu.fiuba.algo3.modelo.Juego;
import edu.fiuba.algo3.modelo.Jugador.Jugador;
import edu.fiuba.algo3.modelo.Tablero.Hexagono;
import edu.fiuba.algo3.modelo.Tablero.Tablero;

/*
    Puede robar una carta aun jugador con construcciones adyacentes sino excepction
 */

public class EstadoPuedeRobar implements EstadoTurno {
    @Override
    public void tirarDado(Turno turno, Juego juego, Dado dado) {

    }

    @Override
    public void moverLadron(Turno turno, Tablero tablero, Hexagono destino) {

    }

    @Override
    public void robar(Turno turno, Tablero tablero, Jugador jugadorVictima, Jugador jugadorActivo) {
        tablero.robarConLadronA(jugadorActivo, jugadorVictima);
        System.out.println("hola");
        turno.cambiarEstado(new EstadoAcciones());
    }

    @Override
    public void construir(Turno turno, Jugador jugador, Construccion construccion,
            Object... ubicaciones) {

    }

    @Override
    public void comerciar(Turno turno, Jugador receptor, Comercio comercio) {

    }

    @Override
    public void jugarCarta(Turno turno, Jugador jugador, Tablero tablero, CartaDesarrollo cartaDesarrollo,
            Object... args) {

    }

    @Override
    public void pasarTurno(Turno turno, Jugador jugadorActivo, Juego juego) {
        System.out.println(jugadorActivo.getNombre());
        jugadorActivo.habilitarCartasDesarrollo();

        juego.finalizarTurnoActual();
        // turno.cambiarEstado(new EstadoInicial());
    }

}
